# eo-datasets

./: .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Dockerfile  Dockerfile-test  MANIFEST.in  Makefile  README.md  SPECIFICATION.md  action.yaml  check-code.sh  conftest.py  entrypoint.sh  message-queue.tf  product_from_dataset.py  pylintrc  pyproject.toml  pytest.ini  recompress.py  requirements-test.txt  requirements.txt  run-tests.sh  setup.cfg  setup.py  sqs-consume.py  sqs-consume.sh  symonston-requirements.txt  testing_out_eodatasets.ipynb  versioneer.py
docs/: conf.py  index.rst  requirements.txt
eo3/: __init__.py  _version.py  assemble.py  aws.py  dataset.schema.yaml  documents.py  eo3_core.py  images.py  model.py  names.py  properties.py  serialise.py  stac.py  ui.py  uris.py  utils.py  validate.py  verify.py  wagl.py
eodatasets/: __init__.py  __main__.py  _version.py  assemble.py  browseimage.py  compat.py  documents.py  drivers.py  image.py  images.py  load.py  package.py  run.py  sensors.json  serialise.py  tesp_ard_metadata_only.py  type.py  ui.py  validate.py  verify.py  version.py
eodatasets2/: _version.py  assemble.py  dataset.schema.yaml  images.py  model.py  properties.py  serialise.py  utils.py  validate.py
eodatasets3/: .wagl_md_only.py.swm  .wagl_md_only.py.swn  .wagl_md_only.py.swo  .wagl_md_only.py.swp  __init__.py  _version.py  assemble.py  dataset.schema.yaml  documents.py  images.py  model.py  names.py  properties.py  serialise.py  stac.py  tesp_ard_metadata_only.py  ui.py  utils.py  validate.py  verify.py  wagl.py  wagl_md_only.py
(+714 files in other folders)
