[build-system]
requires = ["setuptools", "wheel"]

[tool.ruff]

target-version = "py38"


[tool.ruff.lint]
# Which checkers to enable?
select = [
    "A",  # Don't shadow built-ins
    "C4",  # Use list comprehensions etc
    "E",  # pycodestyle
    "EXE",  # Shebangs+Executable permisssions should match
    "F",  # pyflakes
    "G",  # Use logging formatter, not manual string concat
    "I",  # Auto-sort imports
    "ICN",  # Use standard import names, like np for numpy
    "N",  # pep8-naming
    "NPY",  # Numpy
    "RUF",  # Ruf-specific python rules
    # We're using a separate pre-commit hook for this.
    # "S",  # Bandit (security)
    "UP"  # pyupgrade
]

ignore = [
    # Disable these as we don't want to change old code unnecessarily.
    "RUF013", # PEP 484 prohibits implicit `Optional`
    "C408", # Unnecessary `dict` call (rewrite as a literal)
    "ICN001", #  `numpy` should be imported as `np`
    "N818", # Exception name should be named with an Error suffix
]

# Matching old behaviour: We auto-format with the smaller line default
# ...  but only enforce line length to be under this larger 120 limit.
pycodestyle.max-line-length = 120

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["A001"] # Variable `copyright` shadowing a Python builtin (needed for api)

[tool.black]
line-length = 88
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.bandit]

exclude = 'tests'
